Closed Bug 1425504 Opened 7 years ago Closed 7 years ago

Shape::update is not defined anywhere

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: jonco, Assigned: jonco)

Details

Attachments

(1 file)

Patch to remove the Shape::update method declaration which is not defined anywhere.
Attachment #8937101 - Flags: review?(jdemooij)
Comment on attachment 8937101 [details] [diff] [review]
remove-shape-update

stealing
Attachment #8937101 - Flags: review?(jdemooij) → review+
Priority: -- → P3
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/59a2346b07f7
Remove Shape::update method which is not defined anywhere r=jorendorff
https://hg.mozilla.org/mozilla-central/rev/59a2346b07f7
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: