Bug 1425504 - Remove Shape::update method which is not defined anywhere r=jorendorff